--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html ng-app="App">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello</title>
-  </head>
-  <body ng-controller="HelloCtrl">
-    <input type="text" ng-model="name"></input><button ng-click="getName()">Submit</button>
-    <div>{{message}}</div>
-    
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+</head>
+<body>
+
+    <div class="container">
+
+        <h1>Consommer un Service REST en GET</h1>
+        <form ng-controller="HelloCtrl">
+            <div class="form-group>">
+                <input type="text" class="form-control"  ng-model="name" placeholder="Votre nom"></input>
+            </div>
+            <input type="submit" class="btn btn-primary" ng-click="getMessage()" value="Submit" />
+
+            <blockquote ng-if="message">{{message}}</blockquote>
+        </form>
+
+        <h1>Consommer un service REST en POST</h1>
+
+        <form ng-controller="ToDoCtrl">
+
+            <div class="form-group>">
+                <input type="text" class="form-control col-md-6" ng-model="newTask.label" placeholder="Libellé de la tâche"></input>
+            </div>
+            <div class="form-group>">
+                <select class="form-control col-md-6" ng-model="newTask.priority" ng-options="priority for priority in priorities" />
+            </div>
+            <input type="submit" class="btn btn-primary" ng-click="addTask()" value="Submit" />
+            <input type="reset" class="btn btn-default" ng-click="initNewTask()" value="Effacer" />
+        </form>
+
+        <table class="table">
+            <thead>
+            <th>Priorité</th>
+            <th>Libellé</th>
+            </thead>
+            <tbody>
+            <tr ng-repeat="task in tasks">
+                <td>{{ task.priority }}</td>
+                <td>{{ task.label }}</td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="js/app.js"></script>
-  </body>
+</body>
 </html>
